--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -114,7 +114,7 @@
 							</a>
 						</li>
 						<li class="menu-item">
-							<a href="#" class=' menu-link'>
+							<a href="{{ absolute_url(path('backend_domaine_index')) }}" class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Catégorie</span>
                             </span>
@@ -217,7 +217,7 @@
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
 
-			<div class="modal-body p-all-0" id="site-search">
+			<!--<div class="modal-body p-all-0" id="site-search">
 				<button type="button" class="close light" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
@@ -248,7 +248,7 @@
 					 </div>
 				</div>
 
-			</div>
+			</div>-->
 
 		</div>
 	</div>
