--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -122,7 +122,7 @@
 							</a>
 						</li>
 						<li class="menu-item">
-							<a href='#' class=' menu-link'>
+							<a href='{{ absolute_url(path('backend_categorie_index')) }}' class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Sous-catégorie</span>
                             </span>
