--- a/app/Resources/views/categorie/index.html.twig
+++ b/app/Resources/views/categorie/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'backend.html.twig' %}
-{% block title %}{{ parent() }} Gestion des catégories{% endblock %}
+{% block title %}{{ parent() }} Gestion des sous categories{% endblock %}
 {% block body %}
     <section class="admin-content">
         <div class="bg-dark">
             <div class="container  m-b-30">
                 <div class="row">
                     <div class="col-12 text-white p-t-40 p-b-90">
-                        <h4 class="">  Gestion des catégories</h4>
+                        <h4 class="">  Gestion des sous categories</h4>
                     </div>
                 </div>
             </div>
@@ -15,36 +15,54 @@
         <div class="container  pull-up">
             <div class="row">
                 <div class="col-lg-7">
+
                     <div class="card m-b-30">
                         <div class="card-header">
-                            <h5 class="m-b-0">Liste des catégories</h5>
+                            <h5 class="m-b-0">Liste des sous categories</h5>
                         </div>
                         <div class="card-body ">
+                            {% for message in app.flashes('notice') %}
+                                <div class="alert alert-success  alert-dismissible fade show" role="alert">
+                                    <div class="d-flex">
+                                        <div class="icon">
+                                            <i class="icon mdi mdi-check-circle-outline"></i>
+                                        </div>
+                                        <div class="content">
+                                            <strong></strong> {{ message|raw }}
+                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endfor %}
                             <div class="table-responsive p-t-10">
                                 <table id="example" class="table   " style="width:100%">
                                     <thead>
                                     <tr>
                                         <td>ID</td>
-                                        <td>Nom</td>
-                                        <td>Catégories</td>
+                                        <td>Domaines</td>
+                                        <td>Noms</td>
+                                        <td>Biens</td>
                                         <td>Actions</td>
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    {% for domaine in domaines %}
+                                    {% for categorie in categories %}
                                         <tr>
                                             <td>{{ loop.index }}
-                                            <td>{{ domaine.libelle }}</td>
+                                            <td>{{ categorie.domaine.libelle }}</td>
+                                            <td>{{ categorie.libelle }}</td>
                                             <td class="text-center">
-                                                {% if domaine.nombreCategorie is null %}
+                                                {% if categorie.nombreBien is null %}
                                                     -
                                                 {% else %}
-                                                    {{ domaine.nombreCategorie }}
+                                                    {{ categorie.nombreBien }}
                                                 {% endif %}
                                             </td>
                                             <td class="text-center">
                                                 <a href="#"><i class="fa fa-eye"></i></a> |
-                                                <a href="{{ path('backend_domaine_edit', {'slug': domaine.slug}) }}" title="Modifier la catégorie"><i class="fa fa-edit"></i></a>
+                                                <a href="{{ path('backend_categorie_edit', {'slug': categorie.slug}) }}" title="Modifier le categorie"><i class="fa fa-edit"></i></a>
                                             </td>
                                         </tr>
                                     {% endfor %}
@@ -64,6 +82,12 @@
                         </div>
                         <div class="card-body ">
                             {{ form_start(form)}}
+                            <div class="form-row">
+                                <div class="col-12 form-group">
+                                    {{ form_widget(form.domaine)}}
+                                    {{ form_errors(form.domaine) }}
+                                </div>
+                            </div>
                             <div class="form-row">
                                 <div class="col-12 form-group">
                                     {{ form_widget(form.libelle)}}
