Integration template frontend

--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -155,7 +155,7 @@
 							</a>
 						</li>
 						<li class="menu-item">
-							<a href='{{ absolute_url(path('admin_user_index')) }}' class=' menu-link'>
+							<a href='#' class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Utilisateurs</span>
                             </span>
