--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -106,7 +106,7 @@
 					<!--submenu-->
 					<ul class="sub-menu">
 						<li class="menu-item">
-							<a href="#" class=' menu-link'>
+							<a href="{{ absolute_url(path('backend_mode_index')) }}" class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Mode</span>
                             </span>
