--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -81,6 +81,14 @@
 							</a>
 						</li>
 						<li class="menu-item">
+							<a href="{{ path('backend_partenaire_index') }}" class=' menu-link'>
+                            <span class="menu-label">
+                                <span class="menu-name">Partenaires</span>
+                            </span>
+								<span class="menu-icon"><i class="icon-placeholder fa fa-list-alt"></i></span>
+							</a>
+						</li>
+						<li class="menu-item">
 							<a href='#' class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Events</span>
