--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -73,7 +73,7 @@
 					<!--submenu-->
 					<ul class="sub-menu">
 						<li class="menu-item">
-							<a href='#' class=' menu-link'>
+							<a href="{{ path('backend_bien_index') }}" class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Biens</span>
                             </span>
