--- a/app/Resources/views/bien/index.html.twig
+++ b/app/Resources/views/bien/index.html.twig
@@ -10,9 +10,11 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <form action="{{ path('backend_bien_index') }}" method="post">
-                                    <select name="" id="" class="form-control js-select2" onchange="this.form.submit()">
-                                        <option value="">Selection</option>
-                                        <option value="">choix 1</option>
+                                    <select name="categorie" id="categorie" class="form-control js-select2" onchange="this.form.submit()">
+                                        <option value="">-- Selectionnez la sous catégorie --</option>
+                                        {% for categorie in categories %}
+                                            <option value="{{ categorie.slug }}">{{ categorie.libelle }}</option>
+                                        {% endfor %}
                                     </select>
                                 </form>
                             </div>
