backend gestion des bien suite

--- a/app/Resources/views/bien/edit.html.twig
+++ b/app/Resources/views/bien/edit.html.twig
@@ -35,6 +35,11 @@
                                     {{ form_widget(edit_form.description)}}
                                     {{ form_errors(edit_form.description) }}
                                 </div>
+                                <div class="col-12 form-group">
+                                    <label for="">Mots clés</label>
+                                    {{ form_widget(edit_form.tags)}}
+                                    {{ form_errors(edit_form.tags) }}
+                                </div>
                                 <div class="col-6 form-group">
                                     <label for="">Situation géographique</label>
                                     {{ form_widget(edit_form.adresse)}}
@@ -50,10 +55,15 @@
                                     {{ form_widget(edit_form.website)}}
                                     {{ form_errors(edit_form.website) }}
                                 </div>
-                                <div class="col-6 form-group">
+                                <div class="col-3 form-group">
                                     <label for="">Prix</label>
                                     {{ form_widget(edit_form.prix)}}
                                     {{ form_errors(edit_form.prix) }}
+                                </div>
+                                <div class="col-3 form-group">
+                                    <label for="">Affichage du prix</label>
+                                    {{ form_widget(edit_form.affichagePrix)}}
+                                    {{ form_errors(edit_form.affichagePrix) }}
                                 </div>
                                 <div class="col-6 form-group">
                                     <label for="">Visite dossier</label>
@@ -75,6 +85,16 @@
                                     {{ form_widget(edit_form.mode)}}
                                     {{ form_errors(edit_form.mode) }}
                                 </div>
+                                <div class="col-6 form-group">
+                                    <label for="">Date debut promo</label>
+                                    {{ form_widget(edit_form.debutPromo)}}
+                                    {{ form_errors(edit_form.debutPromo) }}
+                                </div>
+                                <div class="col-6 form-group">
+                                    <label for="">Date fin promo</label>
+                                    {{ form_widget(edit_form.finPromo)}}
+                                    {{ form_errors(edit_form.finPromo) }}
+                                </div>
                                 <div class="col-12 form-group">
                                     {{ form_widget(edit_form.imageFile)}}
                                     {{ form_errors(edit_form.imageFile) }}
@@ -89,11 +109,23 @@
                 </div>
             </div>
 
-
         </div>
     </section>
+{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('ressources/vendor/tagsinput/js/bootstrap-tagsinput.css') }}">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote.css" rel="stylesheet">
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
     <script src='{{ absolute_url(asset('ressources/assets/bundles/ba78fede76f682cd388ed2abbfd1e1568e76f8a4.js')) }}'></script>
+    <script src="{{ asset('ressources/vendor/tagsinput/js/bootstrap-tagsinput.min.js') }}"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.12/summernote.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("tag-input").tagsinput();
+            $('#appbundle_bien_description').summernote();
+        })
+    </script>
 {% endblock %}
