Backend gestion des sliders

--- a/app/Resources/views/bien/show.html.twig
+++ b/app/Resources/views/bien/show.html.twig
@@ -49,7 +49,7 @@
                                 <img class="rounded" src="{{ vich_uploader_asset(bien, 'imageFile') }}" alt="">
                             </div>
 
-                            <div class="row mt-5">
+                            <div class="row mt-5 mb-5">
                                 <div class="col">
                                     <div class="opacity-75">
                                         <a href="{{ path('backend_bien_index') }}" class="m-r-5">
