--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -89,6 +89,14 @@
 							</a>
 						</li>
 						<li class="menu-item">
+							<a href="{{ path('backend_slider_index') }}" class=' menu-link'>
+                            <span class="menu-label">
+                                <span class="menu-name">Slider</span>
+                            </span>
+								<span class="menu-icon"><i class="icon-placeholder fa fa-file-picture-o"></i></span>
+							</a>
+						</li>
+						<li class="menu-item">
 							<a href='#' class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Events</span>
