--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,162 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
+<html lang="fr">
+<head>
+    <meta charset="utf-8">
+    <title>
+        {% block title %}{% endblock %}
+    </title>
+    {% block meta %}{% endblock %}
+
+    <link rel="shortcut icon" href="{{ absolute_url(asset('favicon.ico')) }}">
+
+    <link href="{{ absolute_url(asset('css/bootstrap.min.css')) }}" rel="stylesheet" type="text/css" />
+    <link href="{{ absolute_url(asset('css/flexslider.css')) }}" rel="stylesheet" type="text/css" />
+    <link href="{{ absolute_url(asset('css/fancySelect.css')) }}" rel="stylesheet" media="screen, projection" />
+    <link href="{{ absolute_url(asset('css/animate.css')) }}" rel="stylesheet" type="text/css" media="all" />
+    <link href="{{ absolute_url(asset('css/style.css')) }}" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="{{ absolute_url(asset('css/visite.css')) }}">
+
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href="{{ absolute_url(asset('css/font-awesome.min.css')) }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ absolute_url(asset('icofont/icofont.min.css')) }}">
+    {% block slider %}{% endblock %}
+
+</head>
+<body>
+<div id="preloader"><img src="{{ asset('images/preloader.gif') }}" alt="" /></div>
+<div class="preloader_hide">
+
+    <div id="page">
+        <header>
+            <div class="top_info">
+                <div class="container clearfix">
+                    <ul class="secondary_menu">
+                        <li><a href="http://marketys.ci" title="Markety's">Marketys</a></li>
+                        <li><a href="http://alloimmo.ci" title="Alloimmo">Alloimmo</a></li>
+                    </ul>
+                    <div class="phone_top">Service client: <a href="tel:0022575833375" >00225 75 83 33 75</a></div>
+                </div>
+            </div>
+
+            <div class="menu_block">
+                <div class="container clearfix">
+                    <div class="logo">
+                        <a href="{{ path('homepage') }}" ><img src="{{ asset('img/logo2-01.png') }}" alt="" /></a>
+                    </div>
+                    <div class="top_search_form">
+                        <a class="top_search_btn" href="javascript:void(0);" ><i class="fa fa-search"></i></a>
+                        <form method="get" action="#">
+                            <input type="text" name="search" placeholder="Rechercher" />
+                        </form>
+                    </div>
+                    {{ render(url('menu')) }}
+                </div>
+            </div>
+        </header>
+
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+
+        <footer>
+            <div class="container" data-animated='fadeInUp'>
+                <div class="row">
+
+                    <div class="col-lg-6 col-md-6 col-sm-6 padbot30">
+                        <h4>Qui sommes-nous?</h4>
+                        <p class="text-justify">
+                            VISITEZMOI est un concept de <a href="http://marketys.ci" target="_blank"> MARKETY’S</a> une agence en conseil digital.
+
+                            Spécialistes dans la réalisation des visites virtuelles immersives haute définition et de qualité professionnelle.
+                            Nous proposons un large éventail d’innovations technologiques autour de la visite virtuelle 3D et 360° :
+                            Google Street View, Google Map, visite guidée enrichie grâce à du contenu interactif (textes, images, vidéos, sons),
+                            vues 360… <br>
+                            Grâce à une méthode de réalisation unique, nous vous proposons des services sur-mesure répondant à vos besoins et accessibles à tous. Nous vous apportons notre savoir-faire quelque soit votre secteur d’activité et la taille de votre entreprise.
+                            <br>
+                            Bénéficiez de l’outil de communication le plus performant pour montrer et valoriser vos lieux. Entièrement personnalisable, il s’adapte aux spécificités de votre activité.
+                        </p>
+                    </div>
+
+                    <div class="col-lg-1 col-md-1 col-sm-3 col-xs-6 col-ss-12 padbot30">
+                        <h4>Catégorie</h4>
+                        <ul class="foot_menu">
+                            <li><a href="{{ path('maquette_page') }}" >Santé</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Education</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Galerie</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Organisme</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Immobilier</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Commerce</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-1 col-md-1 col-sm-3 col-xs-6 col-ss-12 padbot30">
+                        <h4>Catégorie</h4>
+                        <ul class="foot_menu">
+                            <li><a href="{{ path('maquette_page') }}" >Loisirs</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Mode</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Tourisme</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Showrooms</a></li>
+                            <li><a href="{{ path('maquette_page') }}" >Restauration</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="respond_clear_480"></div>
+
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-ss-12 padbot30">
+                        <h4>Contacts</h4>
+                        <div class="foot_address">Cocody-Angré, Abidjan | Côte d'Ivoire</div>
+                        <div class="foot_phone"><a href="tel:1 800 888 2828" >+225 07 83 33 75</a></div>
+                        <div class="foot_mail"><a href="mailto:info@glamyshop.com" >info@visitezmoi.ci</a></div>
+
+                        <div class="social">
+                            <a href="javascript:void(0);" ><i class="fa fa-twitter"></i></a>
+                            <a href="javascript:void(0);" ><i class="fa fa-facebook"></i></a>
+                            <a href="javascript:void(0);" ><i class="fa fa-instagram"></i></a>
+                        </div>
+                    </div>
+
+                </div><!-- //ROW -->
+            </div><!-- //CONTAINER -->
+
+            <!-- COPYRIGHT -->
+            <div class="copyright">
+
+                <!-- CONTAINER -->
+                <div class="container clearfix">
+                    <!--<div class="foot_logo"><a href="index.html" ><img src="img/logo2-01.png" alt="" /></a></div>-->
+
+                    <div class="copyright_inf">
+                        <span> &copy; VISITEZMOI 2019</span> |
+                        <span>Tous droits réservés</span> |
+                        <a class="back_top" href="javascript:void(0);" >Haut <i class="fa fa-angle-up"></i></a>
+                    </div>
+                </div><!-- //CONTAINER -->
+            </div><!-- //COPYRIGHT -->
+        </footer>
+
+    </div><!-- //PAGE -->
+</div>
+
+<div id="modal-body" class="clearfix">
+    <div id="tovar_content"></div>
+    <div class="close_block"></div>
+</div><!-- TOVAR MODAL CONTENT -->
+
+<!-- SCRIPTS -->
+<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<!--[if IE]><html class="ie" lang="fr"> <![endif]-->
+
+<script src="{{ absolute_url(asset('js/jquery.min.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/bootstrap.min.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/jquery.sticky.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/parallax.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/jquery.flexslider-min.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/jquery.jcarousel.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/fancySelect.js')) }}"></script>
+<script src="{{ absolute_url(asset('js/animate.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/myscript.js')) }}" type="text/javascript"></script>
+<script>
+    if (top != self) top.location.replace(self.location.href);
+</script>
+
+</body>
+
 </html>
