--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,7 +20,7 @@
     <link href="{{ absolute_url(asset('css/font-awesome.min.css')) }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ absolute_url(asset('icofont/icofont.min.css')) }}">
     {% block slider %}{% endblock %}
-
+    {% block mode %}{% endblock %}
 </head>
 <body>
 <div id="preloader"><img src="{{ asset('images/preloader.gif') }}" alt="" /></div>
@@ -144,15 +144,17 @@
 <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if IE]><html class="ie" lang="fr"> <![endif]-->
 
-<script src="{{ absolute_url(asset('js/jquery.min.js')) }}" type="text/javascript"></script>
-<script src="{{ absolute_url(asset('js/bootstrap.min.js')) }}" type="text/javascript"></script>
-<script src="{{ absolute_url(asset('js/jquery.sticky.js')) }}" type="text/javascript"></script>
-<script src="{{ absolute_url(asset('js/parallax.js')) }}" type="text/javascript"></script>
-<script src="{{ absolute_url(asset('js/jquery.flexslider-min.js')) }}" type="text/javascript"></script>
-<script src="{{ absolute_url(asset('js/jquery.jcarousel.js')) }}" type="text/javascript"></script>
-<script src="{{ absolute_url(asset('js/fancySelect.js')) }}"></script>
-<script src="{{ absolute_url(asset('js/animate.js')) }}" type="text/javascript"></script>
-<script src="{{ absolute_url(asset('js/myscript.js')) }}" type="text/javascript"></script>
+{% block javascripts %}
+    <script src="{{ absolute_url(asset('js/jquery.min.js')) }}" type="text/javascript"></script>
+    <script src="{{ absolute_url(asset('js/bootstrap.min.js')) }}" type="text/javascript"></script>
+    <script src="{{ absolute_url(asset('js/jquery.sticky.js')) }}" type="text/javascript"></script>
+    <script src="{{ absolute_url(asset('js/parallax.js')) }}" type="text/javascript"></script>
+    <script src="{{ absolute_url(asset('js/jquery.flexslider-min.js')) }}" type="text/javascript"></script>
+    <script src="{{ absolute_url(asset('js/jquery.jcarousel.js')) }}" type="text/javascript"></script>
+    <script src="{{ absolute_url(asset('js/fancySelect.js')) }}"></script>
+    <script src="{{ absolute_url(asset('js/animate.js')) }}" type="text/javascript"></script>
+    <script src="{{ absolute_url(asset('js/myscript.js')) }}" type="text/javascript"></script>
+{% endblock %}
 <script>
     if (top != self) top.location.replace(self.location.href);
 </script>
