--- a/app/Resources/views/bien/edit.html.twig
+++ b/app/Resources/views/bien/edit.html.twig
@@ -40,6 +40,11 @@
                                     {{ form_widget(edit_form.tags)}}
                                     {{ form_errors(edit_form.tags) }}
                                 </div>
+                                <div class="col-12 form-group">
+                                    <label for="">Google Map</label>
+                                    {{ form_widget(edit_form.googleMap)}}
+                                    {{ form_errors(edit_form.googleMap) }}
+                                </div>
                                 <div class="col-6 form-group">
                                     <label for="">Situation géographique</label>
                                     {{ form_widget(edit_form.adresse)}}
