--- a/app/Resources/views/bien/new.html.twig
+++ b/app/Resources/views/bien/new.html.twig
@@ -40,6 +40,11 @@
                                         {{ form_widget(form.tags)}}
                                         {{ form_errors(form.tags) }}
                                 </div>
+                                <div class="col-12 form-group">
+                                    <label for="">Lien Google Map</label>
+                                    {{ form_widget(form.googleMap)}}
+                                    {{ form_errors(form.googleMap) }}
+                                </div>
                                 <div class="col-6 form-group">
                                     <label for="">Situation géographique</label>
                                     {{ form_widget(form.adresse)}}
