--- a/app/Resources/views/default/maintenance.html.twig
+++ b/app/Resources/views/default/maintenance.html.twig
@@ -10,12 +10,11 @@
 
 	<link rel="shortcut icon" href="images/favicon.ico">
 
-	<!-- CSS -->
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-	<link href="css/flexslider.css" rel="stylesheet" type="text/css" />
-	<link href="css/fancySelect.css" rel="stylesheet" media="screen, projection" />
-	<link href="css/animate.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="css/style.css" rel="stylesheet" type="text/css" />
+	<link href="{{ absolute_url(asset('css/bootstrap.min.css')) }}" rel="stylesheet" type="text/css" />
+	<link href="{{ absolute_url(asset('css/flexslider.css')) }}" rel="stylesheet" type="text/css" />
+	<link href="{{ absolute_url(asset('css/fancySelect.css')) }}" rel="stylesheet" media="screen, projection" />
+	<link href="{{ absolute_url(asset('css/animate.css')) }}" rel="stylesheet" type="text/css" media="all" />
+	<link href="{{ absolute_url(asset('css/style.css')) }}" rel="stylesheet" type="text/css" />
 
 	<!-- FONTS -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -23,7 +22,7 @@
 	<style>
 		.top_sale {
 			min-height:700px;
-			background-image:url(img/slider/02.JPG);
+			background-image:url({{ asset('img/slider/02.JPG') }});
 			background-repeat:no-repeat;
 			background-size:cover;
 		}
@@ -69,15 +68,15 @@
 <!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 <!--[if IE]><html class="ie" lang="en"> <![endif]-->
 
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-<script src="js/jquery.sticky.js" type="text/javascript"></script>
-<script src="js/parallax.js" type="text/javascript"></script>
-<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
-<script src="js/jquery.jcarousel.js" type="text/javascript"></script>
-<script src="js/fancySelect.js"></script>
-<script src="js/animate.js" type="text/javascript"></script>
-<script src="js/myscript.js" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/jquery.min.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/bootstrap.min.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/jquery.sticky.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/parallax.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/jquery.flexslider-min.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/jquery.jcarousel.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/fancySelect.js')) }}"></script>
+<script src="{{ absolute_url(asset('js/animate.js')) }}" type="text/javascript"></script>
+<script src="{{ absolute_url(asset('js/myscript.js')) }}" type="text/javascript"></script>
 
 </body>
 
