--- a/app/Resources/views/default/menu.html.twig
+++ b/app/Resources/views/default/menu.html.twig
@@ -35,5 +35,5 @@
 	</li>
 	<!--<li ><a href="javascript:void(0);" >FAQ</a></li>
 	<li class=""><a href="#" >Contact</a></li>-->
-	<li class="last"><a href="#" title="Se connecter" ><i class="fa fa-user fa-lg"></i> Connexion</a></li>
+	<li class="last"><a href="{{ path('backend_dashboard') }}" title="Se connecter" ><i class="fa fa-user fa-lg"></i> Connexion</a></li>
 </ul>
