--- a/app/Resources/views/frontend/details.html.twig
+++ b/app/Resources/views/frontend/details.html.twig
@@ -40,9 +40,11 @@
 			<!-- ROW -->
 			<div class="row padbot30">
 				<div class="col-lg-6 col-md-6 padbot30">
-					<div id="map">
-						<iframe src="{{ bien.googleMap}}" width="600" height="500" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-					</div>
+					{% if bien.googleMap %}
+						<div id="map">
+							<iframe src="{{ bien.googleMap}}" width="600" height="500" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+						</div>
+					{% endif %}
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-6 padbot30">
