--- a/app/Resources/views/frontend/categorie.html.twig
+++ b/app/Resources/views/frontend/categorie.html.twig
@@ -45,7 +45,7 @@
 						<div class="container">
 							<div class="sale_caption1">
 								<p class="title2 FromTop">
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae commodi eos explicabo
+									{{ slider.titre }}
 								</p>
 							</div>
 						</div><!-- //CONTAINER -->
