--- a/app/Resources/views/frontend/categorie.html.twig
+++ b/app/Resources/views/frontend/categorie.html.twig
@@ -33,28 +33,30 @@
 	</style>
 {% endblock %}
 {% block body %}
-	<section id="home" class="padbot0 margbot40">
+	{% if sliders %}
+		<section id="home" class="padbot0 margbot40">
+			<div class="flexslider top_slider">
+				<ul class="slides2">
+					{% for slider in sliders %}
+						<li class="slide{{loop.index}}">
 
-		<!-- TOP SLIDER -->
-		<div class="flexslider top_slider">
-			<ul class="slides2">
-				{% for slider in sliders %}
-					<li class="slide{{loop.index}}">
+							<!-- CONTAINER -->
+							<div class="container">
+								<div class="sale_caption1">
+									<p class="title2 FromTop">
+										{{ slider.titre }}
+									</p>
+								</div>
+							</div><!-- //CONTAINER -->
+						</li>
+					{% endfor %}
 
-						<!-- CONTAINER -->
-						<div class="container">
-							<div class="sale_caption1">
-								<p class="title2 FromTop">
-									{{ slider.titre }}
-								</p>
-							</div>
-						</div><!-- //CONTAINER -->
-					</li>
-				{% endfor %}
-
-			</ul>
-		</div>
-	</section>
+				</ul>
+			</div>
+		</section>
+	{% else %}
+		<section class="breadcrumb parallax margbot30"></section>
+	{% endif %}
 
 	<section class="banner_section">
 
@@ -75,7 +77,7 @@
 						<div class="col-md-6">
 							<div class="widget_search">
 								<form class="search_form" action="javascript:void(0);" method="get" name="search_form">
-									<input type="text" name="Search..." value="Search..." class="form-control" onFocus="if (this.value == 'Search...') this.value = '';" onBlur="if (this.value == '') this.value = 'Search...';" />
+									<input type="text" name="Recherche..." value="Recherche..." class="form-control" onFocus="if (this.value == 'Search...') this.value = '';" onBlur="if (this.value == '') this.value = 'Search...';" />
 								</form>
 							</div>
 						</div>
@@ -116,6 +118,11 @@
 										<span class="tovar_price"><i class="fa fa-map-marker fa-2x" aria-hidden="true" title="{{ bien.adresse}}"></i></span>
 									</div>
 								</div>
+							</div>
+						{% else %}
+							<div class="wrapper404">
+								<h1>Oups!!!</h1>
+								<p>Aucun bien enregistré pour l'instant pour cette catégorie.</p>
 							</div>
 						{% endfor %}
 
