--- a/app/Resources/views/backend.html.twig
+++ b/app/Resources/views/backend.html.twig
@@ -179,7 +179,7 @@
 							</a>
 						</li>
 						<li class="menu-item">
-							<a href='#' class=' menu-link'>
+							<a href=" {{ path('admin_user_index') }}" class=' menu-link'>
                             <span class="menu-label">
                                 <span class="menu-name">Utilisateurs</span>
                             </span>
