--- a/app/Resources/views/frontend/categorie.html.twig
+++ b/app/Resources/views/frontend/categorie.html.twig
@@ -17,6 +17,22 @@
 			background-size:cover;
 		}
 		{% endfor %}
+		.wrapper404 {
+			float:right;
+			width:770px;
+			padding-right:30px;
+			padding-left:30px;
+			text-align:center;
+			color:#42115E;
+		}
+		.wrapper404 h1 {
+			margin:0;
+			padding-top:10px;
+			font-weight:900;
+			line-height:136px;
+			font-size:130px;
+			color:#42115E;
+		}
 	</style>
 {% endblock %}
 {% block mode %}
